Load data into '/beer' page endpoint